feat(frontend): upload documents
